[test] add \@BeforeEach in CategoryControllerTest