@@ -1,19 +1,14 @@
 package com.example.board.category;
 
 import com.example.board.auth.UserPrincipal;
-import com.example.board.category.dto.CategoryRolePermissionDTO;
-import com.example.board.category.dto.CreateCategoryRequest;
 import com.example.board.category.dto.UpdateCategoryRequest;
-import com.example.board.config.security.WithMockCategoryPermission;
 import com.example.board.config.security.WithMockTeamPermission;
 import com.example.board.permission.CategoryPermission;
-import com.example.board.role.TeamRole;
 import com.example.board.role.TeamRoleRepository;
 import com.example.board.support.AbstractControllerTestSupport;
 import com.example.board.support.TestDataBuilder;
-import com.example.board.team.Team;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
@@ -21,11 +16,8 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
@@ -40,31 +32,31 @@ public class CategoryControllerTest extends AbstractControllerTestSupport {
     private ObjectMapper objectMapper;
     @Autowired
     private TeamRoleRepository teamRoleRepository;
+    private Long teamId;
 
-    private Long getTeamIdFromUserPrincipal(){
-        Authentication authentication =  SecurityContextHolder.getContext().getAuthentication();
+    @BeforeEach
+    void init() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();
-        return userPrincipal.getTestTeamId();
+        teamId = userPrincipal.getTestTeamId();
     }
 
     @Test
     @WithMockTeamPermission(teamPermissions = {"MANAGE_CATEGORIES"})
     void createCategoryTest_withPermission() throws Exception {
-        Long teamId = getTeamIdFromUserPrincipal();
-        var DTO = builder.forCreateCategoryRequest(teamId, null, new HashSet<>(Arrays.asList(CategoryPermission.VIEW_POST)));
+        var DTO = builder.forCreateCategoryRequest(teamId, null, new HashSet<>(List.of(CategoryPermission.VIEW_POST)));
         var request = objectMapper.writeValueAsString(DTO);
 
         mockMvc.perform(post("/teams/{teamId}/categories/create", teamId)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(request))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(request))
                 .andExpect(status().isOk());
     }
 
     @Test
     @WithMockTeamPermission()
     void createCategoryTest_withoutPermission() throws Exception {
-        Long teamId = getTeamIdFromUserPrincipal();
-        var DTO = builder.forCreateCategoryRequest(teamId, null, new HashSet<>(Arrays.asList(CategoryPermission.VIEW_POST)));
+        var DTO = builder.forCreateCategoryRequest(teamId, null, new HashSet<>(List.of(CategoryPermission.VIEW_POST)));
         var request = objectMapper.writeValueAsString(DTO);
 
         mockMvc.perform(post("/teams/{teamId}/categories/create", teamId)
@@ -76,7 +68,6 @@ public class CategoryControllerTest extends AbstractControllerTestSupport {
     @Test
     @WithMockTeamPermission(teamPermissions = {"MANAGE_CATEGORIES"})
     void updateCategoryTest_withPermission() throws Exception {
-        Long teamId = getTeamIdFromUserPrincipal();
         TeamCategory category = builder.createCategory(null, teamId, new HashSet<>());
         var request = objectMapper.writeValueAsString(
                 new UpdateCategoryRequest("test category", "1234", null)
@@ -91,7 +82,6 @@ public class CategoryControllerTest extends AbstractControllerTestSupport {
     @Test
     @WithMockTeamPermission()
     void updateCategoryTest_withoutPermission() throws Exception {
-        Long teamId = getTeamIdFromUserPrincipal();
         TeamCategory category = builder.createCategory(null, teamId, new HashSet<>());
         var request = objectMapper.writeValueAsString(
                 new UpdateCategoryRequest("test category", "1234", null)
